Added more DOM traversal stuff

--- a/test/runner.html
+++ b/test/runner.html
@@ -5,6 +5,7 @@
 	<title>jNearly tests</title>
 </head>
 <body>
+	<script src="../node_modules/babel-polyfill/dist/polyfill.js"></script>
 	<script src="../dist/bundle.js"></script>
 </body>
 </html>
