Added more things

--- a/test/runner.html
+++ b/test/runner.html
@@ -14,10 +14,22 @@
 			<p class="one">one</p><p>two</p>
 		</div>
 
-		<div id="dom-manipulation-remove">
-			<p>test</p>
-			<p>test 2</p>
-			<p class="test">test 3</p>
+		<div id="dom-manipulation">
+			<div class="html">
+				<p>This is the <strong>worst</strong> thing ever.</p>
+				<p>test</p>
+			</div>
+
+			<div class="text">
+				<p>This is the <strong>worst</strong> thing ever.</p>
+				<p>test<strong>bye</strong></p>
+			</div>
+
+			<div class="remove">
+				<p>test</p>
+				<p>test 2</p>
+				<p class="test">test 3</p>
+			</div>
 		</div>
 
 		<div id="dom-traversal">
