Added more util functions

--- a/test/runner.html
+++ b/test/runner.html
@@ -54,10 +54,14 @@
 		<div id="looping">
 			<p></p><p></p><p></p><p></p><p></p><p></p>
 		</div>
+
+		<div id="util">
+			<iframe></iframe>
+		</div>
 	</div>
 
 	<script src="../node_modules/babel-polyfill/dist/polyfill.js"></script>
-	<script src="../dist/bundle.js"></script>
+	<script src="../dist/jnearly.js"></script>
 
 	<script src="../node_modules/mocha/mocha.js"></script>
 	<script src="../node_modules/should/should.js"></script>
