Add basic addClass removeClass toggleClass

--- a/test/runner.html
+++ b/test/runner.html
@@ -30,6 +30,18 @@
 				<p>test 2</p>
 				<p class="test">test 3</p>
 			</div>
+
+			<div class="addClass">
+				<p>foo</p>
+			</div>
+
+			<div class="removeClass">
+				<p class="blah">foo</p>
+			</div>
+
+			<div class="toggleClass">
+				<p class="foo">foo</p>
+			</div>
 		</div>
 
 		<div id="dom-traversal">
