--- a/test/runner.html
+++ b/test/runner.html
@@ -51,6 +51,8 @@
 			<p></p>
 		</div>
 
+		<div id="events-off"></div>
+
 		<div id="looping">
 			<p></p><p></p><p></p><p></p><p></p><p></p>
 		</div>
