--- a/test/runner.html
+++ b/test/runner.html
@@ -14,6 +14,10 @@
 			<p class="one">one</p><p>two</p>
 		</div>
 
+		<div id="index-two">
+			<p>test</p>
+		</div>
+
 		<div id="dom-manipulation">
 			<div class="html">
 				<p>This is the <strong>worst</strong> thing ever.</p>
