Moved some dom traversal stuff into dom-misc.js

--- a/test/runner.html
+++ b/test/runner.html
@@ -79,6 +79,7 @@
 	<!-- test files -->
 	<script src="index.spec.js"></script>
 	<script src="method/dom-manipulation.spec.js"></script>
+	<script src="method/dom-misc.spec.js"></script>
 	<script src="method/dom-traversal.spec.js"></script>
 	<script src="method/events.spec.js"></script>
 	<script src="method/loops.spec.js"></script>
