Flesh out the classList API

--- a/test/runner.html
+++ b/test/runner.html
@@ -33,14 +33,27 @@
 
 			<div class="addClass">
 				<p>foo</p>
+				<div class="multiple">
+					<p>foo</p>
+				</div>
 			</div>
 
 			<div class="removeClass">
 				<p class="blah">foo</p>
+				<div class="multiple">
+					<p class="foo bar">foo</p>
+				</div>
 			</div>
 
 			<div class="toggleClass">
 				<p class="foo">foo</p>
+				<div class="multiple">
+					<p class="foo bar">foo</p>
+				</div>
+
+				<div class="force">
+					<p class="toggleFalse">toggle false</p>
+				</div>
 			</div>
 		</div>
 
